<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Kasir</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_buka">Buka</string>
    <string name="drawer_tutup">Tutup</string>
    <string name="login_title">SMART KASIR</string>
    <string name="login_user_name">User Name</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="view_harga">Rp. 3000</string>
    <string name="view_kali_simbol">X</string>
    <string name="view_total_harga">Rp. 50.000</string>
    <string name="text_nama_produk">Nama Produk</string>
    <string name="text_harga">Harga</string>
    <string name="text_stok">Stok</string>
    <string name="button_batal">Batal</string>
    <string name="button_selesai">Selesai</string>
    <string name="button_tambahkan">Tambahkan</string>
    <string name="dialog_nama_produk">Nama Produk</string>
    <string name="dialog_content_description">Dialog</string>
    <string name="dialog_kode_produk">Kode Produk</string>
    <string name="dialog_harga">Harga</string>
    <string name="dialog_stok">Stok</string>
    <string name="shop_scan_mastin">Mastin</string>
    <string name="shop_scan_rp">Rp. 0</string>
    <string name="shop_scan_tambah_otomatis">Tambah Otomatis</string>
    <string name="shop_scan_text">SN</string>
    <string name="sheets_total">TOTAL</string>
    <string name="sheets_rp">Rp. 0</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="drawer_menu_belanja">Belanja</string>
    <string name="drawer_menu_produk">Produk</string>
    <string name="drawer_menu_laporan">Laporan</string>
    <string name="bottom_menu_tambah">Tambah</string>
    <string name="bottom_menu_tambahkan_banyak">Tambahkan banyak dengan Barcode</string>
    <string name="drawer_menu_about">About</string>
    <string name="drawer_menu_license">License</string>
    <string name="menu_item_logout">Logout</string>
    <string name="popup_menu_tambahkan_ke_keranjang">Tambahkan ke Keranjang</string>
    <string name="popup_menu_edit">Edit</string>
    <string name="popup_menu_hapus">Hapus</string>
    <string name="user_profile_photo">login profile</string>
    <string name="drawer_menu_lovins_members">Developer</string>
    <string name="drawer_menu_google_maps">Google Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_item_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="drawer_menu_smart_kasir">Smart Kasir</string>

</resources>
